--- a/Boilerplate App/hackathon-starter/views/home.pug
+++ b/Boilerplate App/hackathon-starter/views/home.pug
@@ -7,21 +7,21 @@ block content
   .row
     .col-md-6
       h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      p Lorem ipsum or whatever this latin text is is weird so I'm changing it to some helpful links.
       p
         a.btn.btn-raised(href='#', role='button') View details »
     .col-md-6
       h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      a.foo_link(href='https://codeburst.io/getting-started-with-pug-template-engine-e49cfa291e33', target='_blank') Getting Started with Pug
+      p 
+        a.btn.btn-raised(href='#', role='button') View details »
+    .col-md-6
+      h2 Heading
+      a.foo_link(href='https://pugjs.org/language/inheritance.html', target='_blank') More information on pug inheritance
       p
         a.btn.btn-raised(href='#', role='button') View details »
     .col-md-6
       h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-raised(href='#', role='button') View details »
-    .col-md-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      a.foo_link(href='https://mongoosejs.com/docs/', target='_blank') Getting Started with mongoose
       p
         a.btn.btn-raised(href='#', role='button') View details »
